Ajout d'un premier about très simple

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,5 +1,5 @@
 <h2 class="section-title">{{ .titles.about }}</h2>
 
 <p itemprop="description">
-  Écrire une description pour la conférence.
+  La conférence en science des données appliquée au hockey de Montréal se déroulera à l'automne 2022 et proposera différentes  présentations en lien avec l'application de la science des données dans l'univers du hockey.
 </p>
