Ajout dans le a propos

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,5 +1,13 @@
 <h2 class="section-title">{{ .titles.about }}</h2>
 
 <p itemprop="description">
-  La conférence en science des données appliquée au hockey de Montréal se déroulera à l'automne 2022 et proposera différentes  présentations en lien avec l'application de la science des données dans l'univers du hockey.
+  Dans cette toute première édition, la conférence en science des données appliquée au hockey de Montréal a comme objectif de promouvoir l'utilisation de la science des données dans l'univers du hockey.
+  <br> <br>
+  <b>Au programme:</b>
+  <br>
+  <ul>
+    <li>Des présentations variées sur des applications concrètes où la science des données et le hockey se recontrent.</li>
+    <li>Des opportunités d'échanger avec des passionnés de hockey et des adeptes des statistiques avancées (probablement les deux en même temps!).</li>
+    <li>Des réflexions qui permettront aux intervenants du milieu du hockey à mieux comprendre les bénéfices et les limitations de l'intelligence articifielle dans le contexte de ce sport.</li>
+  </ul>
 </p>
