--- a/css/custom.css
+++ b/css/custom.css
@@ -7,3 +7,8 @@ ul.block li {
   font-size: 1.6em;
   line-height: 1.6em;
 }
+
+.header {
+  background-attachment: fixed;
+  background-position: center -200px;
+}
