--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,7 +14,7 @@ ul.block li {
    ========================================================================== */
 .header {
   background-attachment: fixed;
-  background-position: center -200px;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
 }
