--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -2,7 +2,7 @@
 
 <p itemprop="description">
   La conférence en science des données appliquée au hockey de Montréal (SDHMTL) est un événement unique en
-  son genre au Québec qui a pour but de réunir un large spectre de passionné(e)s de hockey.
+  son genre au Québec qui a pour but de réunir un large spectre de passionné·e·s de hockey.
   On y abordera des sujets aussi variés que WW et ZZ, en passant par XX et YY.
   Alors que vous soyez entraineuses hors pair, pooleurs assidus ou expertes en analyse de données, vous y trouverez assurément votre compte!
 </p>
@@ -12,8 +12,8 @@
   <ul class="block">
     <li>Des présentations variées d'applications concrètes où la science des données et le
         hockey se rencontrent;</li>
-    <li>Des opportunités d'échanger avec des passionné(e)s de hockey et des adeptes d'analyse de données;</li>
-    <li>Des réflexions qui permettront aux intervenant(e)s du milieu de mieux comprendre les
+    <li>Des opportunités d'échanger avec des passionné·e·s de hockey et des adeptes d'analyse de données;</li>
+    <li>Des réflexions qui permettront aux intervenant·e·s du milieu de mieux comprendre les
         bénéfices et les limites de l'intelligence articifielle dans un contexte de hockey.
     </li>
   </ul>
