Comment out les themes

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,10 +1,10 @@
 <h2 class="section-title">{{ .titles.about }}</h2>
 
 <p itemprop="description">
-  La conférence en science des données appliquée au hockey de Montréal (SDHMTL) est un événement unique en
+  La conférence </em> Science des données et hockey <em> de Montréal (SDHMTL) est un événement unique en
   son genre au Québec qui a pour but de réunir un large spectre de passionné·e·s de hockey.
-  On y abordera des sujets aussi variés que WW et ZZ, en passant par XX et YY.
-  Alors que vous soyez entraineuses hors pair, pooleurs assidus ou expertes en analyse de données, vous y trouverez assurément votre compte!
+  <!--On y abordera des sujets aussi variés que WW et ZZ, en passant par XX et YY. Alors -->
+  Que vous soyez entraineuses hors pair, pooleurs assidus ou expertes en analyse de données, vous y trouverez assurément votre compte!
 </p>
 
 <p itemprop="description">
