--- a/css/custom.css
+++ b/css/custom.css
@@ -13,10 +13,18 @@ ul.block li {
    HEADER
    ========================================================================== */
 .header {
-  background-attachment: fixed;
-  background-position: center -300px;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.logo-name {
+  font-size: 6em;
+}
+
+.tagline {
+  font-weight: bold;
+  padding-top: 20px;
 }
 
 
@@ -77,6 +85,10 @@ ul.block li {
   .header {
     background-attachment: initial;
     background-position: center center;
+  }
+  
+  .logo-name {
+    font-size: 3em;
   }
   
 }
