--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -4,7 +4,7 @@
   La conférence <em> Science des données et hockey </em> de Montréal (SDHMTL) est un événement unique en
   son genre au Québec qui a pour but de réunir un large spectre de passionné·e·s de hockey.
   <!--On y abordera des sujets aussi variés que WW et ZZ, en passant par XX et YY. Alors -->
-  Que vous soyez entraineuses hors pair, pooleurs assidus ou expertes en analyse de données, vous y trouverez assurément votre compte!
+  Que vous soyez une entraineuse hors pair, un pooleur assidu ou une experte en analyse de données, vous y trouverez assurément votre compte!
 </p>
 
 <p itemprop="description">
@@ -14,7 +14,7 @@
         hockey se rencontrent;</li>
     <li>Des opportunités d'échanger avec des passionné·e·s de hockey et des adeptes d'analyse de données;</li>
     <li>Des réflexions qui permettront aux intervenant·e·s du milieu de mieux comprendre les
-        bénéfices et les limites de l'intelligence articifielle dans un contexte de hockey.
+        bénéfices et les limites de la science des données dans un contexte de hockey.
     </li>
   </ul>
 </p>
